ref(vars): env var names

--- a/.postgres.env
+++ b/.postgres.env
@@ -1,5 +1,5 @@
-DB_NAME=persistence_db
-DB_USER=persistence_user
-DB_PASSWORD=
-DB_HOST=postgres
-DB_PORT=5432  
+POSTGRES_DB=persistence_db
+POSTGRES_USER=persistence_user
+POSTGRES_PASSWORD=
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
